--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h2 class="fw-bold text-white fs-1 mt-3">متجر إلكتروني ولا أسهل</h2>
             <p class="text-white mt-5">أنشئ متجر إلكتروني بسيط يساعدك تبيع أكثر وتوصل للعالمية. قم بإدارته من أي مكان
               وبأي وقت</p>
-            <img src="images/trust.png" class="mt-3">
+            <img src="images/trust.png" class="mt-3 w-100">
             <button class="btn-store fw-medium mt-5 py-3">أنشئ متجرك الالكترونى الان</button>
           </div>
         </div>
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mt-3">
-          <img src="images/Online-store-main-new01.png">
+          <img src="images/Online-store-main-new01.png" class="w-100">
         </div>
       </div>
     </div>
@@ -121,7 +121,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mt-3">
-          <img src="images/Online-store-main-new02.png">
+          <img src="images/Online-store-main-new02.png" class="w-100">
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mt-3">
           <h2 class="mt-6">سوِّق منتجاتك بسهوله</h2>
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mt-3">
-          <img src="images/Online-store-main-new03.png">
+          <img src="images/Online-store-main-new03.png" class="w-100">
         </div>
       </div>
     </div>
@@ -245,9 +245,9 @@
     </div>
   </div>
   <!-- srervices -->
-  <div class="services p-5 text-center">
+  <div class="services py-5 text-center">
     <div class="container">
-      <h2 class="text-center text-black p-5 fw-bolder">خدمات أخرى من فاتورة</h2>
+      <h2 class="text-center text-black py-5 fw-bolder">خدمات أخرى من فاتورة</h2>
       <div class="row">
         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mt-3">
           <div class="box">
