--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-              <ul class="d-flex align-items-center bg-white text-center">
+              <ul class=" bg-white text-center">
                 <li><a class="dropdown-item" href="#">
                     <h2>عن فاتورة</h2>
                     <p class="fs-5">نحن نطمح أن تكون التجارة الالكترونية متاحة للجميع</p>
                     <button class="general-btn ">تواصل معنا</button>
-                  </a></li>
+                  </a>
+                </li>
 
               </ul>
               <ul>
