update nav and footer

--- a/index.html
+++ b/index.html
@@ -35,23 +35,13 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
           </li>
-
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
               عن فاتورة
+
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-              <ul class=" bg-white text-center">
-                <li><a class="dropdown-item" href="#">
-                    <h2>عن فاتورة</h2>
-                    <p class="fs-5">نحن نطمح أن تكون التجارة الالكترونية متاحة للجميع</p>
-                    <button class="general-btn ">تواصل معنا</button>
-                  </a>
-                </li>
-
-              </ul>
               <ul>
                 <li><a class="dropdown-item" href="#">القائمة</a></li>
                 <li><a class="dropdown-item" href="#">من نحن</a></li>
@@ -61,9 +51,17 @@
                 <li><a class="dropdown-item" href="#">ابلغ عن مشكلة</a></li>
                 <li><a class="dropdown-item" href="#">الاسئلة الشائعه</a></li>
               </ul>
-
+              <ul>
+                <li><a class="dropdown-item" href="#">الادوات</a></li>
+                <li><a class="dropdown-item" href="#">نظام الفواتير</a></li>
+                <li><a class="dropdown-item" href="#">روابط الدفع</a></li>
+                <li><a class="dropdown-item" href="#">المدونة</a></li>
+                <li><a class="dropdown-item" href="#">الكاشير وpos</a></li>
+                <li><a class="dropdown-item" href="#">المتجر الالكترونى</a></li>
+                <li><a class="dropdown-item" href="#">بوابة الدفع الالكترونى</a></li>
+              </ul>
+            
             </div>
-          </li>
           </li>
 
         </ul>
@@ -425,13 +423,13 @@
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-end">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">اتصل </h6>
-            <p><i class="fas fa-home me-3 general-color"></i> الامارات العربيه المتحدة </p>
+            <p><i class="fas fa-home me-3 general-color"></i> <span class="me-2">الامارات العربيه المتحدة</span></p>
             <p>
               <i class="fas fa-envelope me-3 general-color"></i>
-              mahrousgamal2001@gmail.com
+              <span class="me-2">mahrousgamal2001@gmail.com</span>
             </p>
-            <p><i class="fas fa-phone me-3 general-color "></i> 9752 144 0100</p>
-            <p><i class="fas fa-print me-3 general-color"></i> 5552 144 0110</p>
+            <p><i class="fas fa-phone me-3 general-color"></i> <span class="me-2">9752 144 0100</span></p>
+            <p><i class="fas fa-print me-3 general-color"></i> <span class="me-2">5552 144 0110</span></p>
           </div>
           <!-- Grid column -->
         </div>
