--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <p class="text-white mt-5">أنشئ متجر إلكتروني بسيط يساعدك تبيع أكثر وتوصل للعالمية. قم بإدارته من أي مكان
               وبأي وقت</p>
             <img src="images/trust.png" class="mt-3 w-100">
-            <button class="btn-store fw-medium mt-5 py-3">أنشئ متجرك الالكترونى الان</button>
-          </div>
+            <button class="btn-store fw-medium mt-5 py-3 d-flex align-items-center">أنشئ متجرك الالكترونى الان <i class="fa-solid fa-circle-arrow-left fs-5 general-color me-2 icon-btn"></i></button>
+          </div>  
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mt-3">
           <img src="images/Store_fatora_loop_new.gif" class="w-100">
@@ -227,17 +227,20 @@
       <h3 class="pt-3 py-4 text-white">اسعار تناسب احتياجاتك</h3>
       <div class="row">
         <div class="col-md-6 mt-3">
-          <div class="free p-5">
-            <h1>مجانا</h1>
+          <div class="free p-4">
+            <h2 class="general-color fs-1 fw-bold">مجانا</h2>
             <p>فواتير احترافية & كاشيير</p>
             <p>متجر الكتروني & روابط الدفع</p>
+            <p class="text-secondary">لماذا مجانا ؟</p>
           </div>
         </div>
         <div class="col-md-6 mt-3">
-          <div class="free p-5">
-            <h1>9$</h1>
+          <div class="free p-4">
+            <h2 class="general-color fs-1 fw-bold">$9</h2>
             <p>فواتير & طلبات لامحدودة</p>
             <p>تفعيل الدفع الالكتروني</p>
+            <p class="text-secondary">قارن الاسعار <i class="fa-solid fa-circle-arrow-left"></i></p>
+
           </div>
         </div>
       </div>
@@ -316,7 +319,7 @@
     <div class="container">
       <div class="txt">
         <h2>متجر فاتورة ليس فقط متجر الكتروني, هو شريكك في التجارة الإلكترونية </h2>
-        <button class="general-btn mt-4">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
+        <button class="general-btn btn-store mt-4">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
       </div>
 
     </div>
