--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
               <li>عبر منصات ا لتواصل الاجتماعي </li>
               <li>عبر تطبيق جوال خاص بك </li>
             </ul>
-            <button class="general-btn">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
+            <button class="general-btn d-flex justify-content-between align-items-center">اعرف المزيد <i class="fa-solid fa-circle-arrow-left me-2"></i></button>
+
           </div>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mt-3">
@@ -126,7 +127,8 @@
           <h2 class="mt-6">سوِّق منتجاتك بسهوله</h2>
           <P class="text-secondary">لدينا متجر يساعدك على تسويق منتجاتك بسهولة والوصول لعملائك, من خلال تصدره نتائج جوجل
             , والربط المباشر بالحملات الإعلانية وأدوات التسويق الرقمي</P>
-          <button class="general-btn">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
+          <button class="general-btn d-flex justify-content-between align-items-center">اعرف المزيد <i class="fa-solid fa-circle-arrow-left me-2"></i></button>
+
         </div>
 
       </div>
@@ -148,7 +150,8 @@
               <li>الشحن والتوصيل</li>
               <li> التوفير والصلاحيات</li>
             </ul>
-            <button class="general-btn">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
+            <button class="general-btn d-flex justify-content-between align-items-center">اعرف المزيد <i class="fa-solid fa-circle-arrow-left me-2"></i></button>
+
           </div>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mt-3">
@@ -199,7 +202,8 @@
           <p>وفرنا لك فريق دعم فني متخصص يساعدك في الإجابة عن كافة تساؤلاتك واستفساراتك.</p>
         </div>
       </div>
-      <button class="general-btn">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
+      <button class="general-btn d-flex justify-content-between align-items-center">اعرف المزيد <i class="fa-solid fa-circle-arrow-left me-2"></i></button>
+      
     </div>
   </div>
   <!-- owner -->
@@ -215,7 +219,7 @@
             <P class="text-secondary">حصل الكثير على متجر الكتروني مجاني من منصة فاتورة لمحلها زهور الربيع وقد قامت
               بتخصيصه وتنسيقه واختيار ألوانه بطريقة تتناسب مع علامتها التجارية، وخصصت قوائم لعرض منتجاتها من الزهور
               المتنوعة، وكتابة وصف مميز لها مع اضافة الاسعار وكوبونات الخصم.</P>
-            <button class="general-btn">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
+            <button class="general-btn d-flex justify-content-between align-items-center">اعرف المزيد <i class="fa-solid fa-circle-arrow-left me-2"></i></button>
           </div>
         </div>
       </div>
@@ -319,7 +323,7 @@
     <div class="container">
       <div class="txt">
         <h2>متجر فاتورة ليس فقط متجر الكتروني, هو شريكك في التجارة الإلكترونية </h2>
-        <button class="general-btn btn-store mt-4">اعرف المزيد <i class="fa-solid fa-circle-arrow-left"></i></button>
+        <button class="general-btn btn-store mt-4  d-flex justify-content-between align-items-center m-auto">اعرف المزيد <i class="fa-solid fa-circle-arrow-left me-2"></i></button>
       </div>
 
     </div>
@@ -330,24 +334,24 @@
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
+      <div class="me-5 d-none d-lg-block fs-5">
         <span>للتواصل معنا: </span>
       </div>
       <!-- Left -->
 
       <!-- Right -->
       <div>
-        <a href="" class="me-4 text-reset">
+        <a href="" class="me-4 text-reset fs-5">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="" class="me-4 text-reset">
+        <a href="" class="me-4 text-reset  fs-5">
           <i class="fab fa-twitter"></i>
         </a>
 
-        <a href="" class="me-4 text-reset">
+        <a href="" class="me-4 text-reset  fs-5">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="" class="me-4 text-reset">
+        <a href="" class="me-4 text-reset  fs-5">
           <i class="fab fa-linkedin"></i>
         </a>
 
